--- a/index.html
+++ b/index.html
@@ -10,24 +10,14 @@
 <body>
     
     <div class="container">
-        <div class="app-title">
-            <p>Weather</p>
-        </div>
+      <div class="app-title"><p>Weather</p></div>
         <div class="notification"></div>
-        <div class="weather-container">
-            <div class="weather-icon">
-                <img src="./assets/images/icons/unknown.png" alt="">
-            </div>
-            <div class="temperature-value">
-                <p>- °<span>F</span></p>
-            </div>
-            <div class="temperature-description">
-                <p> - </p>
-            </div>
-            <div class="location">
-                <p>-</p>
-            </div>
-        </div>
+          <div class="weather-container">
+            <div class="weather-icon"><img src="./assets/images/icons/unknown.png" alt=""></div>
+            <div class="temperature-value"><p>- °<span>F</span></p></div>
+            <div class="temperature-description"><p> - </p></div>
+          </div>
+      <div class="location"><p>-</p></div>
     </div>
     
     <script src="./assets/script.js"></script>
